--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Ignore object files and executables
 *.o
 *.obj
 *.exe
+
+# Directories
+bin/
+obj/
+build/
+
+# Ignore IDE specific files
+.vscode/
