--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_CXX_FLAGS_RELEASE "-Os")
 
 # include library from dependency folder
-include_directories(${CMAKE_SOURCE_DIR}/dependency/msvc-raylib/include)
-link_directories(${CMAKE_SOURCE_DIR}/dependency/msvc-raylib/lib)
+include_directories(${CMAKE_SOURCE_DIR}/dependencies/msvc-raylib/include)
+link_directories(${CMAKE_SOURCE_DIR}/dependencies/msvc-raylib/lib)
 
 add_library(snake_data SHARED
     "point.cpp"
@@ -23,4 +23,4 @@ set_target_properties(snake_data PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS ON)
 file(GLOB SOURCES "RaylibPainter.cpp" "engine.cpp" "main.cpp")
 add_executable(Snake ${SOURCES})
 
-target_link_libraries(Snake snake_data raylib) # Leagă bibliotecile
+target_link_libraries(Snake snake_data raylib winmm) # Leagă bibliotecile
